--- a/Styles/style.css
+++ b/Styles/style.css
@@ -64,10 +64,11 @@ header {
   width: 50%;
   padding-left: 20px;
   cursor: default;
+  text-align: left;
 }
 
 .pres-text-card span {
-  background: #bfb7a8;
+  background: rgba(243, 174, 151, 1);
   color: #222;
   padding: 3px 8px;
   font-size: 14px;
@@ -95,12 +96,12 @@ header {
 .pre-info {
   font-size: 15px;
   margin-bottom: 30px;
-  color: var(--text-color-second);
+  color: rgb(68, 68, 68);
 }
 
 .social_icons {
   display: flex;
-  margin-top: 16px;
+  margin-top: 40px;
   gap: 30px;
 }
 
@@ -110,8 +111,7 @@ header {
   align-items: center;
   width: 40px;
   height: 40px;
-  border-radius: 50%;
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+  font-size: 20px;
   cursor: pointer;
 }
 
@@ -123,27 +123,257 @@ header {
   display: flex;
   justify-content: right;
   align-items: center;
-  min-height: 80vh;
+  min-height: 60vh;
   width: 50%;
+  background: rgb(250, 250, 250);
 }
 .image {
   margin: auto 0;
   width: 380px;
-  height: 380px;
+  height: 360px;
+  border-radius: 50%;
+  background-color: #588a87ab;
 }
 .image img {
   width: 380px;
   height: 380px;
   object-fit: cover;
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(250, 250, 250, 0.8) 100%
+  );
 }
 
+.tooltip-text {
+  visibility: hidden;
+  width: 80px;
+  background-color: rgb(68, 68, 68);
+  color: rgb(250, 250, 250);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: -40%;
+  opacity: 0;
+  transition: opacity 0.3s;
+  font-size: 10px;
+}
+.icon {
+  position: relative;
+  display: inline-block;
+}
+
+.icon:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+  transition: 1.5s;
+}
+/* PROYECTOS */
 .header-title {
   position: relative;
   display: flex;
   align-items: center;
   align-content: center;
   gap: 0.75em;
-  color: rgb(68, 68, 68);
+  color: #588a87;
   font-weight: 600;
   margin-block: 20px;
 }
+
+/* ------------------------------------- */
+.card-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-block: 60px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  background-color: rgb(250, 250, 250);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(2px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+/* Imagen dentro de la tarjeta */
+.card-image img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+/* Contenido de la tarjeta */
+.card-content {
+  padding: 20px;
+}
+
+.card-content h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  color: rgb(68, 68, 68);
+}
+
+.card-content p {
+  font-size: 1rem;
+  color: rgba(68, 68, 68, 0.699);
+  margin-bottom: 15px;
+}
+
+.stack-icons i {
+  font-size: 24px;
+  font-weight: 800;
+  margin: 8px;
+  color: #588a87;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: rgba(243, 174, 151, 1);
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #588a87;
+}
+
+/* --------------------------------- */
+.section {
+  margin: 2em;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.header-title i {
+  font-size: 24px;
+}
+.header-title h2 span {
+  color: #588a87;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.about-info {
+  display: flex;
+  width: 100%;
+  height: auto;
+  justify-content: space-between;
+}
+.about-info p {
+  max-width: 80vh;
+  height: auto;
+  margin-block: 40px;
+  margin-right: 60px;
+  text-align: left;
+  color: rgba(68, 68, 68, 0.705);
+}
+.about-image {
+  margin-inline: 40px;
+  width: 300px;
+  height: auto;
+}
+.about-image img {
+  object-fit: cover;
+  width: 360px;
+  height: 300px;
+}
+.skills-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-block: 60px;
+  justify-content: space-between;
+  height: auto;
+  width: 85%;
+}
+
+.education-container {
+  gap: 12px;
+  display: flex;
+  flex-direction: column;
+}
+.education-header h3 {
+  font-size: 20px;
+  font-weight: 800;
+  color: #588a87;
+}
+.education-header h3 span {
+  color: rgb(68, 68, 68);
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.education-list ul li {
+  margin: 20px;
+  color: rgb(68, 68, 68);
+}
+.education-list p {
+  color: rgba(68, 68, 68, 0.699);
+}
+.tech-stack-header h3 {
+  font-size: 20px;
+  font-weight: 800;
+  color: #588a87;
+}
+.tech-stack-header h3 span {
+  color: rgb(68, 68, 68);
+  font-size: 20px;
+  font-weight: 800;
+}
+.icon-stack {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  font-size: 2em;
+  font-weight: 600;
+  margin-block: 24px;
+}
+.icon-stack img {
+  height: 1em;
+  width: 1em;
+}
+
+/* ----- FOOTER BOX ----- */
+footer {
+  background-color: rgb(250, 250, 250);
+  color: rgb(68, 68, 68);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 1rem;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-container p {
+  margin: 10px;
+}
+
+/* Faltan media query */
